export const snapshot = {};

snapshot[`associateByFile - export.ts 1`] = `
[
  {
    dependencies: [
      {
        code: {
          span: {
            end: {
              character: 71,
              line: 0,
            },
            start: {
              character: 23,
              line: 0,
            },
          },
          specifier: "https://deno.land/std@0.200.0/assert/assert.ts",
        },
        from: {
          name: "deno.land/std",
          path: "/assert/assert.ts",
          protocol: "https:",
          version: "0.200.0",
        },
        map: undefined,
        to: {
          name: "deno.land/std",
          path: "/assert/assert.ts",
          protocol: "https:",
          version: "123.456.789",
        },
      },
    ],
    kind: "module",
  },
]
`;

snapshot[`write - export.ts 1`] = `
[
  'export { assert } from "https://deno.land/std@123.456.789/assert/assert.ts";
',
]
`;

snapshot[`associateByFile - multiple_imports.ts 1`] = `
[
  {
    dependencies: [
      {
        code: {
          span: {
            end: {
              character: 52,
              line: 3,
            },
            start: {
              character: 30,
              line: 3,
            },
          },
          specifier: "jsr:@luca/flag@1.0.0",
        },
        from: {
          name: "@luca/flag",
          path: "",
          protocol: "jsr:",
          version: "1.0.0",
        },
        map: undefined,
        to: {
          name: "@luca/flag",
          path: "",
          protocol: "jsr:",
          version: "123.456.789",
        },
      },
      {
        code: {
          span: {
            end: {
              character: 71,
              line: 0,
            },
            start: {
              character: 23,
              line: 0,
            },
          },
          specifier: "https://deno.land/std@0.200.0/assert/assert.ts",
        },
        from: {
          name: "deno.land/std",
          path: "/assert/assert.ts",
          protocol: "https:",
          version: "0.200.0",
        },
        map: undefined,
        to: {
          name: "deno.land/std",
          path: "/assert/assert.ts",
          protocol: "https:",
          version: "123.456.789",
        },
      },
      {
        code: {
          span: {
            end: {
              character: 74,
              line: 1,
            },
            start: {
              character: 28,
              line: 1,
            },
          },
          specifier: "https://deno.land/x/deno_graph@0.50.0/mod.ts",
        },
        from: {
          name: "deno.land/x/deno_graph",
          path: "/mod.ts",
          protocol: "https:",
          version: "0.50.0",
        },
        map: undefined,
        to: {
          name: "deno.land/x/deno_graph",
          path: "/mod.ts",
          protocol: "https:",
          version: "123.456.789",
        },
      },
      {
        code: {
          span: {
            end: {
              character: 40,
              line: 2,
            },
            start: {
              character: 18,
              line: 2,
            },
          },
          specifier: "npm:node-emoji@2.0.0",
        },
        from: {
          name: "node-emoji",
          path: "",
          protocol: "npm:",
          version: "2.0.0",
        },
        map: undefined,
        to: {
          name: "node-emoji",
          path: "",
          protocol: "npm:",
          version: "123.456.789",
        },
      },
    ],
    kind: "module",
  },
]
`;

snapshot[`write - multiple_imports.ts 1`] = `
[
  'import { assert } from "https://deno.land/std@123.456.789/assert/assert.ts";
import { createGraph } from "https://deno.land/x/deno_graph@123.456.789/mod.ts";
import emoji from "npm:node-emoji@123.456.789";
import { printProgress } from "jsr:@luca/flag@123.456.789";
',
]
`;

snapshot[`associateByFile - import_map_referred/import_map.json 1`] = `
[
  {
    dependencies: [
      {
        code: {
          span: undefined,
          specifier: "https://deno.land/x/dax@0.17.0/mod.ts",
        },
        from: {
          name: "deno.land/x/dax",
          path: "/mod.ts",
          protocol: "https:",
          version: "0.17.0",
        },
        map: {
          key: "dax",
          resolved: "https://deno.land/x/dax@0.17.0/mod.ts",
        },
        to: {
          name: "deno.land/x/dax",
          path: "/mod.ts",
          protocol: "https:",
          version: "123.456.789",
        },
      },
    ],
    kind: "import_map",
  },
]
`;

snapshot[`write - import_map_referred/import_map.json 1`] = `
[
  '{
  "imports": {
    "dax": "https://deno.land/x/dax@123.456.789/mod.ts"
  }
}
',
]
`;

snapshot[`associateByFile - import_map_referred/mod.ts 1`] = `
[
  {
    dependencies: [
      {
        code: {
          span: {
            end: {
              character: 19,
              line: 0,
            },
            start: {
              character: 14,
              line: 0,
            },
          },
          specifier: "dax",
        },
        from: {
          name: "deno.land/x/dax",
          path: "/mod.ts",
          protocol: "https:",
          version: "0.17.0",
        },
        map: {
          key: "dax",
          resolved: "https://deno.land/x/dax@0.17.0/mod.ts",
        },
        to: {
          name: "deno.land/x/dax",
          path: "/mod.ts",
          protocol: "https:",
          version: "123.456.789",
        },
      },
    ],
    kind: "import_map",
  },
]
`;

snapshot[`write - import_map_referred/mod.ts 1`] = `
[
  '{
  "imports": {
    "dax": "https://deno.land/x/dax@123.456.789/mod.ts"
  }
}
',
]
`;

snapshot[`associateByFile - updated_import_and_outdated_export.ts 1`] = `
[
  {
    dependencies: [
      {
        code: {
          span: {
            end: {
              character: 84,
              line: 1,
            },
            start: {
              character: 29,
              line: 1,
            },
          },
          specifier: "https://deno.land/std@0.200.0/assert/assert_equals.ts",
        },
        from: {
          name: "deno.land/std",
          path: "/assert/assert_equals.ts",
          protocol: "https:",
          version: "0.200.0",
        },
        map: undefined,
        to: {
          name: "deno.land/std",
          path: "/assert/assert_equals.ts",
          protocol: "https:",
          version: "123.456.789",
        },
      },
    ],
    kind: "module",
  },
]
`;

snapshot[`write - updated_import_and_outdated_export.ts 1`] = `
[
  'import { assert } from "https://deno.land/std@123.456.789/assert/assert.ts";
export { assertEquals } from "https://deno.land/std@123.456.789/assert/assert_equals.ts";
',
]
`;

snapshot[`associateByFile - import_map/deno.json 1`] = `
[
  {
    dependencies: [
      {
        code: {
          span: undefined,
          specifier: "jsr:@luca/flag@1.0.0",
        },
        from: {
          name: "@luca/flag",
          path: "",
          protocol: "jsr:",
          version: "1.0.0",
        },
        map: {
          key: "flag",
          resolved: "jsr:@luca/flag@1.0.0",
        },
        to: {
          name: "@luca/flag",
          path: "",
          protocol: "jsr:",
          version: "123.456.789",
        },
      },
      {
        code: {
          span: undefined,
          specifier: "https://deno.land/std@0.200.0/",
        },
        from: {
          name: "deno.land/std",
          path: "/",
          protocol: "https:",
          version: "0.200.0",
        },
        map: {
          key: "std/",
          resolved: "https://deno.land/std@0.200.0/",
        },
        to: {
          name: "deno.land/std",
          path: "/",
          protocol: "https:",
          version: "123.456.789",
        },
      },
      {
        code: {
          span: undefined,
          specifier: "https://deno.land/x/deno_graph@0.50.0/mod.ts",
        },
        from: {
          name: "deno.land/x/deno_graph",
          path: "/mod.ts",
          protocol: "https:",
          version: "0.50.0",
        },
        map: {
          key: "deno_graph",
          resolved: "https://deno.land/x/deno_graph@0.50.0/mod.ts",
        },
        to: {
          name: "deno.land/x/deno_graph",
          path: "/mod.ts",
          protocol: "https:",
          version: "123.456.789",
        },
      },
      {
        code: {
          span: undefined,
          specifier: "npm:node-emoji@1.0.0",
        },
        from: {
          name: "node-emoji",
          path: "",
          protocol: "npm:",
          version: "1.0.0",
        },
        map: {
          key: "node-emoji",
          resolved: "npm:node-emoji@1.0.0",
        },
        to: {
          name: "node-emoji",
          path: "",
          protocol: "npm:",
          version: "123.456.789",
        },
      },
    ],
    kind: "import_map",
  },
]
`;

snapshot[`write - import_map/deno.json 1`] = `
[
  '{
  "imports": {
    "std/": "https://deno.land/std@123.456.789/",
    "deno_graph": "https://deno.land/x/deno_graph@123.456.789/mod.ts",
    "node-emoji": "npm:node-emoji@123.456.789",
    "flag": "jsr:@luca/flag@123.456.789",
    "/": "./"
  }
}
',
]
`;

snapshot[`associateByFile - import_map/mod.ts 1`] = `
[
  {
    dependencies: [
      {
        code: {
          span: {
            end: {
              character: 36,
              line: 3,
            },
            start: {
              character: 30,
              line: 3,
            },
          },
          specifier: "flag",
        },
        from: {
          name: "@luca/flag",
          path: "",
          protocol: "jsr:",
          version: "1.0.0",
        },
        map: {
          key: "flag",
          resolved: "jsr:@luca/flag@1.0.0",
        },
        to: {
          name: "@luca/flag",
          path: "",
          protocol: "jsr:",
          version: "123.456.789",
        },
      },
      {
        code: {
          span: {
            end: {
              character: 38,
              line: 0,
            },
            start: {
              character: 23,
              line: 0,
            },
          },
          specifier: "std/assert.ts",
        },
        from: {
          name: "deno.land/std",
          path: "/",
          protocol: "https:",
          version: "0.200.0",
        },
        map: {
          key: "std/",
          resolved: "https://deno.land/std@0.200.0/assert.ts",
        },
        to: {
          name: "deno.land/std",
          path: "/",
          protocol: "https:",
          version: "123.456.789",
        },
      },
      {
        code: {
          span: {
            end: {
              character: 40,
              line: 1,
            },
            start: {
              character: 28,
              line: 1,
            },
          },
          specifier: "deno_graph",
        },
        from: {
          name: "deno.land/x/deno_graph",
          path: "/mod.ts",
          protocol: "https:",
          version: "0.50.0",
        },
        map: {
          key: "deno_graph",
          resolved: "https://deno.land/x/deno_graph@0.50.0/mod.ts",
        },
        to: {
          name: "deno.land/x/deno_graph",
          path: "/mod.ts",
          protocol: "https:",
          version: "123.456.789",
        },
      },
      {
        code: {
          span: {
            end: {
              character: 36,
              line: 2,
            },
            start: {
              character: 24,
              line: 2,
            },
          },
          specifier: "node-emoji",
        },
        from: {
          name: "node-emoji",
          path: "",
          protocol: "npm:",
          version: "1.0.0",
        },
        map: {
          key: "node-emoji",
          resolved: "npm:node-emoji@1.0.0",
        },
        to: {
          name: "node-emoji",
          path: "",
          protocol: "npm:",
          version: "123.456.789",
        },
      },
    ],
    kind: "import_map",
  },
]
`;

snapshot[`write - import_map/mod.ts 1`] = `
[
  '{
  "imports": {
    "std/": "https://deno.land/std@123.456.789/",
    "deno_graph": "https://deno.land/x/deno_graph@123.456.789/mod.ts",
    "node-emoji": "npm:node-emoji@123.456.789",
    "flag": "jsr:@luca/flag@123.456.789",
    "/": "./"
  }
}
',
]
`;

snapshot[`associateByFile - npm.ts 1`] = `
[
  {
    dependencies: [
      {
        code: {
          span: {
            end: {
              character: 40,
              line: 0,
            },
            start: {
              character: 18,
              line: 0,
            },
          },
          specifier: "npm:node-emoji@2.0.0",
        },
        from: {
          name: "node-emoji",
          path: "",
          protocol: "npm:",
          version: "2.0.0",
        },
        map: undefined,
        to: {
          name: "node-emoji",
          path: "",
          protocol: "npm:",
          version: "123.456.789",
        },
      },
    ],
    kind: "module",
  },
]
`;

snapshot[`write - npm.ts 1`] = `
[
  'import emoji from "npm:node-emoji@123.456.789";
import chalk from "npm:chalk@5";
import express from "npm:express@^4.17";
',
]
`;

snapshot[`associateByFile - import_and_export.ts 1`] = `
[
  {
    dependencies: [
      {
        code: {
          span: {
            end: {
              character: 71,
              line: 0,
            },
            start: {
              character: 23,
              line: 0,
            },
          },
          specifier: "https://deno.land/std@0.200.0/assert/assert.ts",
        },
        from: {
          name: "deno.land/std",
          path: "/assert/assert.ts",
          protocol: "https:",
          version: "0.200.0",
        },
        map: undefined,
        to: {
          name: "deno.land/std",
          path: "/assert/assert.ts",
          protocol: "https:",
          version: "123.456.789",
        },
      },
      {
        code: {
          span: {
            end: {
              character: 74,
              line: 1,
            },
            start: {
              character: 28,
              line: 1,
            },
          },
          specifier: "https://deno.land/x/deno_graph@0.50.0/mod.ts",
        },
        from: {
          name: "deno.land/x/deno_graph",
          path: "/mod.ts",
          protocol: "https:",
          version: "0.50.0",
        },
        map: undefined,
        to: {
          name: "deno.land/x/deno_graph",
          path: "/mod.ts",
          protocol: "https:",
          version: "123.456.789",
        },
      },
    ],
    kind: "module",
  },
]
`;

snapshot[`write - import_and_export.ts 1`] = `
[
  'import { assert } from "https://deno.land/std@123.456.789/assert/assert.ts";
export { createGraph } from "https://deno.land/x/deno_graph@123.456.789/mod.ts";
',
]
`;

snapshot[`associateByFile - import_map_no_resolve/deno.json 1`] = `[]`;

snapshot[`write - import_map_no_resolve/deno.json 1`] = `[]`;

snapshot[`associateByFile - import_map_no_resolve/mod.ts 1`] = `
[
  {
    dependencies: [
      {
        code: {
          span: {
            end: {
              character: 71,
              line: 0,
            },
            start: {
              character: 23,
              line: 0,
            },
          },
          specifier: "https://deno.land/std@0.200.0/assert/assert.ts",
        },
        from: {
          name: "deno.land/std",
          path: "/assert/assert.ts",
          protocol: "https:",
          version: "0.200.0",
        },
        map: undefined,
        to: {
          name: "deno.land/std",
          path: "/assert/assert.ts",
          protocol: "https:",
          version: "123.456.789",
        },
      },
    ],
    kind: "module",
  },
]
`;

snapshot[`write - import_map_no_resolve/mod.ts 1`] = `
[
  'import { assert } from "https://deno.land/std@123.456.789/assert/assert.ts";
',
]
`;

snapshot[`associateByFile - relative_import/mod.ts 1`] = `
[
  {
    dependencies: [
      {
        code: {
          span: {
            end: {
              character: 71,
              line: 0,
            },
            start: {
              character: 23,
              line: 0,
            },
          },
          specifier: "https://deno.land/std@0.200.0/assert/assert.ts",
        },
        from: {
          name: "deno.land/std",
          path: "/assert/assert.ts",
          protocol: "https:",
          version: "0.200.0",
        },
        map: undefined,
        to: {
          name: "deno.land/std",
          path: "/assert/assert.ts",
          protocol: "https:",
          version: "123.456.789",
        },
      },
    ],
    kind: "module",
  },
]
`;

snapshot[`write - relative_import/mod.ts 1`] = `
[
  'export { assert } from "https://deno.land/std@123.456.789/assert/assert.ts";
',
]
`;

snapshot[`associateByFile - jsonc/deno.jsonc 1`] = `
[
  {
    dependencies: [
      {
        code: {
          span: undefined,
          specifier: "jsr:@luca/flag@1.0.0",
        },
        from: {
          name: "@luca/flag",
          path: "",
          protocol: "jsr:",
          version: "1.0.0",
        },
        map: {
          key: "flag",
          resolved: "jsr:@luca/flag@1.0.0",
        },
        to: {
          name: "@luca/flag",
          path: "",
          protocol: "jsr:",
          version: "123.456.789",
        },
      },
      {
        code: {
          span: undefined,
          specifier: "https://deno.land/std@0.200.0/",
        },
        from: {
          name: "deno.land/std",
          path: "/",
          protocol: "https:",
          version: "0.200.0",
        },
        map: {
          key: "std/",
          resolved: "https://deno.land/std@0.200.0/",
        },
        to: {
          name: "deno.land/std",
          path: "/",
          protocol: "https:",
          version: "123.456.789",
        },
      },
      {
        code: {
          span: undefined,
          specifier: "https://deno.land/x/deno_graph@0.50.0/mod.ts",
        },
        from: {
          name: "deno.land/x/deno_graph",
          path: "/mod.ts",
          protocol: "https:",
          version: "0.50.0",
        },
        map: {
          key: "deno_graph",
          resolved: "https://deno.land/x/deno_graph@0.50.0/mod.ts",
        },
        to: {
          name: "deno.land/x/deno_graph",
          path: "/mod.ts",
          protocol: "https:",
          version: "123.456.789",
        },
      },
      {
        code: {
          span: undefined,
          specifier: "npm:node-emoji@1.0.0",
        },
        from: {
          name: "node-emoji",
          path: "",
          protocol: "npm:",
          version: "1.0.0",
        },
        map: {
          key: "node-emoji",
          resolved: "npm:node-emoji@1.0.0",
        },
        to: {
          name: "node-emoji",
          path: "",
          protocol: "npm:",
          version: "123.456.789",
        },
      },
    ],
    kind: "import_map",
  },
]
`;

snapshot[`write - jsonc/deno.jsonc 1`] = `
[
  '{
  "imports": {
    "std/": "https://deno.land/std@123.456.789/",
    "deno_graph": "https://deno.land/x/deno_graph@123.456.789/mod.ts",
    "node-emoji": "npm:node-emoji@123.456.789",
    "flag": "jsr:@luca/flag@123.456.789",
    // map root to the project root
    "/": "./"
  }
}
',
]
`;

snapshot[`associateByFile - updated_and_outdated.ts 1`] = `
[
  {
    dependencies: [
      {
        code: {
          span: {
            end: {
              character: 84,
              line: 1,
            },
            start: {
              character: 29,
              line: 1,
            },
          },
          specifier: "https://deno.land/std@0.200.0/assert/assert_equals.ts",
        },
        from: {
          name: "deno.land/std",
          path: "/assert/assert_equals.ts",
          protocol: "https:",
          version: "0.200.0",
        },
        map: undefined,
        to: {
          name: "deno.land/std",
          path: "/assert/assert_equals.ts",
          protocol: "https:",
          version: "123.456.789",
        },
      },
    ],
    kind: "module",
  },
]
`;

snapshot[`write - updated_and_outdated.ts 1`] = `
[
  'import { assert } from "https://deno.land/std@123.456.789/assert/assert.ts";
import { assertEquals } from "https://deno.land/std@123.456.789/assert/assert_equals.ts";
',
]
`;

snapshot[`associateByFile - multiple_modules/mod.ts 1`] = `
[
  {
    dependencies: [
      {
        code: {
          span: {
            end: {
              character: 84,
              line: 0,
            },
            start: {
              character: 29,
              line: 0,
            },
          },
          specifier: "https://deno.land/std@0.200.0/assert/assert_equals.ts",
        },
        from: {
          name: "deno.land/std",
          path: "/assert/assert_equals.ts",
          protocol: "https:",
          version: "0.200.0",
        },
        map: undefined,
        to: {
          name: "deno.land/std",
          path: "/assert/assert_equals.ts",
          protocol: "https:",
          version: "123.456.789",
        },
      },
    ],
    kind: "module",
  },
  {
    dependencies: [
      {
        code: {
          span: {
            end: {
              character: 71,
              line: 0,
            },
            start: {
              character: 23,
              line: 0,
            },
          },
          specifier: "https://deno.land/std@0.200.0/assert/assert.ts",
        },
        from: {
          name: "deno.land/std",
          path: "/assert/assert.ts",
          protocol: "https:",
          version: "0.200.0",
        },
        map: undefined,
        to: {
          name: "deno.land/std",
          path: "/assert/assert.ts",
          protocol: "https:",
          version: "123.456.789",
        },
      },
      {
        code: {
          span: {
            end: {
              character: 74,
              line: 1,
            },
            start: {
              character: 28,
              line: 1,
            },
          },
          specifier: "https://deno.land/x/deno_graph@0.50.0/mod.ts",
        },
        from: {
          name: "deno.land/x/deno_graph",
          path: "/mod.ts",
          protocol: "https:",
          version: "0.50.0",
        },
        map: undefined,
        to: {
          name: "deno.land/x/deno_graph",
          path: "/mod.ts",
          protocol: "https:",
          version: "123.456.789",
        },
      },
      {
        code: {
          span: {
            end: {
              character: 40,
              line: 2,
            },
            start: {
              character: 18,
              line: 2,
            },
          },
          specifier: "npm:node-emoji@2.0.0",
        },
        from: {
          name: "node-emoji",
          path: "",
          protocol: "npm:",
          version: "2.0.0",
        },
        map: undefined,
        to: {
          name: "node-emoji",
          path: "",
          protocol: "npm:",
          version: "123.456.789",
        },
      },
    ],
    kind: "module",
  },
]
`;

snapshot[`write - multiple_modules/mod.ts 1`] = `
[
  'import { assertEquals } from "https://deno.land/std@123.456.789/assert/assert_equals.ts";
export const noop = () => {};
',
  'import { assert } from "https://deno.land/std@123.456.789/assert/assert.ts";
import { createGraph } from "https://deno.land/x/deno_graph@123.456.789/mod.ts";
import emoji from "npm:node-emoji@123.456.789";
import { noop } from "./lib.ts";
',
]
`;

snapshot[`associateByFile - import.ts 1`] = `
[
  {
    dependencies: [
      {
        code: {
          span: {
            end: {
              character: 71,
              line: 0,
            },
            start: {
              character: 23,
              line: 0,
            },
          },
          specifier: "https://deno.land/std@0.200.0/assert/assert.ts",
        },
        from: {
          name: "deno.land/std",
          path: "/assert/assert.ts",
          protocol: "https:",
          version: "0.200.0",
        },
        map: undefined,
        to: {
          name: "deno.land/std",
          path: "/assert/assert.ts",
          protocol: "https:",
          version: "123.456.789",
        },
      },
    ],
    kind: "module",
  },
]
`;

snapshot[`write - import.ts 1`] = `
[
  'import { assert } from "https://deno.land/std@123.456.789/assert/assert.ts";
',
]
`;

snapshot[`associateByFile - unversioned.ts 1`] = `
[
  {
    dependencies: [
      {
        code: {
          span: {
            end: {
              character: 63,
              line: 0,
            },
            start: {
              character: 23,
              line: 0,
            },
          },
          specifier: "https://deno.land/std/assert/assert.ts",
        },
        from: {
          name: "deno.land/std/assert/assert.ts",
          path: "",
          protocol: "https:",
        },
        map: undefined,
        to: {
          name: "deno.land/std",
          path: "/assert/assert.ts",
          protocol: "https:",
          version: "123.456.789",
        },
      },
    ],
    kind: "module",
  },
]
`;

snapshot[`write - unversioned.ts 1`] = `
[
  'import { assert } from "https://deno.land/std@123.456.789/assert/assert.ts";
',
]
`;

snapshot[`associateByFile - jsr.ts 1`] = `
[
  {
    dependencies: [
      {
        code: {
          span: {
            end: {
              character: 48,
              line: 0,
            },
            start: {
              character: 23,
              line: 0,
            },
          },
          specifier: "jsr:@std/assert@0.210.0",
        },
        from: {
          name: "@std/assert",
          path: "",
          protocol: "jsr:",
          version: "0.210.0",
        },
        map: undefined,
        to: {
          name: "@std/assert",
          path: "",
          protocol: "jsr:",
          version: "123.456.789",
        },
      },
    ],
    kind: "module",
  },
]
`;

snapshot[`write - jsr.ts 1`] = `
[
  'import { assert } from "jsr:@std/assert@123.456.789";
import { parse } from "jsr:@std/semver@^0.210.0";
',
]
`;
